@@ -6,6 +6,7 @@ Version 1.4.12 - SVN
 --------------------
   - Enabled user selection of address format when adding from address
     book during message composition.
+  - Fixed issue with adding attachments in PHP 4.x environments (#1805471).
 
 Version 1.4.11 - 29 September 2007
 ----------------------------------
